--- a/src/index.css
+++ b/src/index.css
@@ -170,3 +170,12 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+#time-taken {
+  position: absolute;
+  right: 0;
+  padding: 1rem;
+  top: 0;
+  font-size: 12px;
+  font-weight: bold;
+}
